fix: Make sure popups are always aligned on the left

--- a/src/stylesheets/components/popups.css
+++ b/src/stylesheets/components/popups.css
@@ -5,6 +5,8 @@
     position: relative;
 
     display: inline-block;
+
+    text-align: left;
 }
 
 .popup__opener {
